tests/negative/pkg_errors_in_pkg/target/src/foo_dynamic.toit
// Copyright (C) 2021 Toitware ApS. All rights reserved.

say_hi:
  throw "throw in pkg"
